--- a/index.html
+++ b/index.html
@@ -28,6 +28,36 @@
         <h1>Эффективные решения <br>для вашего бизнеса</h1>
         <button>Заказать услугу</button>
     </section>
+    <!-- О НАС -->
+    <section>
+        <h2 hidden>О нас</h2>
+        <ul>
+            <li>
+                <img src="./img/about-us/antenna 1.svg" alt="Иконака антены">
+                <h3>Внимание к деталям</h3>
+                <p>Идейные соображения, а также начало повседневной работы
+                    по формированию позиции.</p>
+            </li>
+            <li>
+                <img src="./img/about-us/clock 1.svg" alt="Иконка часов">
+                <h3>Пунктуальность</h3>
+                <p>Задача организации, в особенности же рамки
+                    и место обучения кадров влечет за собой.</p>
+            </li>
+            <li>
+                <img src="./img/about-us/diagram 1.svg" alt="Иконка диаграмы">
+                <h3>Планирование</h3>
+                <p>Равным образом консультация
+                    с широким активом в значительной степени обуславливает.</p>
+            </li>
+            <li>
+                <img src="./img/about-us/astronaut 1.svg" alt="Иконка астронавта">
+                <h3>Современные технологии</h3>
+                <p>Значимость этих проблем настолько очевидна,
+                    что реализация плановых заданий.</p>
+            </li>
+        </ul>
+    </section>
 </body>
 
 </html>
