Добавлена секция Чем мы занимаемся

--- a/index.html
+++ b/index.html
@@ -58,6 +58,24 @@
             </li>
         </ul>
     </section>
+    <!-- ЧЕМ МЫ ЗАНИМАЕМСЯ -->
+    <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+            <li>
+                <img src="./img/ourwork/noutbook.jpg" alt="Изображение ноутбука" width="379" height="294">
+                <p>Десктопные приложения</p>
+            </li>
+        </ul>
+        <li>
+            <img src="./img/ourwork/mobile.jpg" alt="Изображение смартфона" width="379" height="294">
+            <p>Мобильные приложения</p>
+        </li>
+        <li>
+            <img src="./img/ourwork/dekstop.jpg" alt="Изображение монитора" width="379" height="294">
+            <p>Дизайнерские решения</p>
+        </li>
+    </section>
 </body>
 
 </html>
