Добавлена секция Команда

--- a/index.html
+++ b/index.html
@@ -76,6 +76,56 @@
             <p>Дизайнерские решения</p>
         </li>
     </section>
+    <!-- НАША КОМАНДА -->
+    <section>
+        <h2>Наша команда</h2>
+        <ul>
+            <li>
+                <img src="./img/team/nikolai.jpg" alt="Фото Николая" width="270" height="260">
+                <h3>Николай Кучеренко</h3>
+                <p lang="en">Product Designer</p>
+                <ul>
+                    <li><a href="#"><img src="./img/social/instagram.svg" alt="иконка Инстаграм"></a></li>
+                    <li><a href="#"><img src="./img/social/twitter.svg" alt="иконка Твыттер"></a></li>
+                    <li><a href="#"><img src="./img/social/facebook.svg" alt="иконка Фейсбук"></a></li>
+                    <li><a href="#"><img src="./img/social/linkedin.svg" alt="иконка Линкедин"></a></li>
+                </ul>
+            </li>
+            <li>
+                <img src="./img/team/olga.jpg" alt="Фото Ольги" width="270" height="260">
+                <h3>Ольга Иванова</h3>
+                <p lang="en">Frontend Developer</p>
+                <ul>
+                    <li><a href="#"><img src="./img/social/instagram.svg" alt="иконка Инстаграм"></a></li>
+                    <li><a href="#"><img src="./img/social/twitter.svg" alt="иконка Твыттер"></a></li>
+                    <li><a href="#"><img src="./img/social/facebook.svg" alt="иконка Фейсбук"></a></li>
+                    <li><a href="#"><img src="./img/social/linkedin.svg" alt="иконка Линкедин"></a></li>
+                </ul>
+            </li>
+            <li>
+                <img src="./img/team/andrei.jpg" alt="Фото Андрея" width="270" height="260">
+                <h3>Андрей Шевченко</h3>
+                <p lang="en">Marketing</p>
+                <ul>
+                    <li><a href="#"><img src="./img/social/instagram.svg" alt="иконка Инстаграм"></a></li>
+                    <li><a href="#"><img src="./img/social/twitter.svg" alt="иконка Твыттер"></a></li>
+                    <li><a href="#"><img src="./img/social/facebook.svg" alt="иконка Фейсбук"></a></li>
+                    <li><a href="#"><img src="./img/social/linkedin.svg" alt="иконка Линкедин"></a></li>
+                </ul>
+            </li>
+            <li>
+                <img src="./img/team/ivan.jpg" alt="Фото Ивана" width="270" height="260">
+                <h3>Иван Николаев</h3>
+                <p lang="en">UI Designer</p>
+                <ul>
+                    <li><a href="#"><img src="./img/social/instagram.svg" alt="иконка Инстаграм"></a></li>
+                    <li><a href="#"><img src="./img/social/twitter.svg" alt="иконка Твыттер"></a></li>
+                    <li><a href="#"><img src="./img/social/facebook.svg" alt="иконка Фейсбук"></a></li>
+                    <li><a href="#"><img src="./img/social/linkedin.svg" alt="иконка Линкедин"></a></li>
+                </ul>
+            </li>
+        </ul>
+    </section>
 </body>
 
 </html>
