--- a/index.html
+++ b/index.html
@@ -33,25 +33,25 @@
         <h2 hidden>О нас</h2>
         <ul>
             <li>
-                <img src="./img/about-us/antenna 1.svg" alt="Иконака антены">
+                <img src="./imges/about-us/antenna 1.svg" alt="Иконака антены">
                 <h3>Внимание к деталям</h3>
                 <p>Идейные соображения, а также начало повседневной работы
                     по формированию позиции.</p>
             </li>
             <li>
-                <img src="./img/about-us/clock 1.svg" alt="Иконка часов">
+                <img src="./imges/about-us/clock 1.svg" alt="Иконка часов">
                 <h3>Пунктуальность</h3>
                 <p>Задача организации, в особенности же рамки
                     и место обучения кадров влечет за собой.</p>
             </li>
             <li>
-                <img src="./img/about-us/diagram 1.svg" alt="Иконка диаграмы">
+                <img src="./imges/about-us/diagram 1.svg" alt="Иконка диаграмы">
                 <h3>Планирование</h3>
                 <p>Равным образом консультация
                     с широким активом в значительной степени обуславливает.</p>
             </li>
             <li>
-                <img src="./img/about-us/astronaut 1.svg" alt="Иконка астронавта">
+                <img src="./imges/about-us/astronaut 1.svg" alt="Иконка астронавта">
                 <h3>Современные технологии</h3>
                 <p>Значимость этих проблем настолько очевидна,
                     что реализация плановых заданий.</p>
@@ -63,16 +63,16 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
             <li>
-                <img src="./img/ourwork/noutbook.jpg" alt="Изображение ноутбука" width="379" height="294">
+                <img src="./imges/ourwork/noutbook.jpg" alt="Изображение ноутбука" width="379" height="294">
                 <p>Десктопные приложения</p>
             </li>
         </ul>
         <li>
-            <img src="./img/ourwork/mobile.jpg" alt="Изображение смартфона" width="379" height="294">
+            <img src="./imges/ourwork/mobile.jpg" alt="Изображение смартфона" width="379" height="294">
             <p>Мобильные приложения</p>
         </li>
         <li>
-            <img src="./img/ourwork/dekstop.jpg" alt="Изображение монитора" width="379" height="294">
+            <img src="./imges/ourwork/dekstop.jpg" alt="Изображение монитора" width="379" height="294">
             <p>Дизайнерские решения</p>
         </li>
     </section>
@@ -81,47 +81,47 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./img/team/nikolai.jpg" alt="Фото Николая" width="270" height="260">
+                <img src="./imges/team/nikolai.jpg" alt="Фото Николая" width="270" height="260">
                 <h3>Николай Кучеренко</h3>
                 <p lang="en">Product Designer</p>
                 <ul>
-                    <li><a href="#"><img src="./img/social/instagram.svg" alt="иконка Инстаграм"></a></li>
-                    <li><a href="#"><img src="./img/social/twitter.svg" alt="иконка Твыттер"></a></li>
-                    <li><a href="#"><img src="./img/social/facebook.svg" alt="иконка Фейсбук"></a></li>
-                    <li><a href="#"><img src="./img/social/linkedin.svg" alt="иконка Линкедин"></a></li>
+                    <li><a href="#"><img src="./imges/social/instagram.svg" alt="иконка Инстаграм"></a></li>
+                    <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Твыттер"></a></li>
+                    <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Фейсбук"></a></li>
+                    <li><a href="#"><img src="./imges/social/linkedin.svg" alt="иконка Линкедин"></a></li>
                 </ul>
             </li>
             <li>
-                <img src="./img/team/olga.jpg" alt="Фото Ольги" width="270" height="260">
+                <img src="./imges/team/olga.jpg" alt="Фото Ольги" width="270" height="260">
                 <h3>Ольга Иванова</h3>
                 <p lang="en">Frontend Developer</p>
                 <ul>
-                    <li><a href="#"><img src="./img/social/instagram.svg" alt="иконка Инстаграм"></a></li>
-                    <li><a href="#"><img src="./img/social/twitter.svg" alt="иконка Твыттер"></a></li>
-                    <li><a href="#"><img src="./img/social/facebook.svg" alt="иконка Фейсбук"></a></li>
-                    <li><a href="#"><img src="./img/social/linkedin.svg" alt="иконка Линкедин"></a></li>
+                    <li><a href="#"><img src="./imges/social/instagram.svg" alt="иконка Инстаграм"></a></li>
+                    <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Твыттер"></a></li>
+                    <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Фейсбук"></a></li>
+                    <li><a href="#"><img src="./imges/social/linkedin.svg" alt="иконка Линкедин"></a></li>
                 </ul>
             </li>
             <li>
-                <img src="./img/team/andrei.jpg" alt="Фото Андрея" width="270" height="260">
+                <img src="./imges/team/andrei.jpg" alt="Фото Андрея" width="270" height="260">
                 <h3>Андрей Шевченко</h3>
                 <p lang="en">Marketing</p>
                 <ul>
-                    <li><a href="#"><img src="./img/social/instagram.svg" alt="иконка Инстаграм"></a></li>
-                    <li><a href="#"><img src="./img/social/twitter.svg" alt="иконка Твыттер"></a></li>
-                    <li><a href="#"><img src="./img/social/facebook.svg" alt="иконка Фейсбук"></a></li>
-                    <li><a href="#"><img src="./img/social/linkedin.svg" alt="иконка Линкедин"></a></li>
+                    <li><a href="#"><img src="./imges/social/instagram.svg" alt="иконка Инстаграм"></a></li>
+                    <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Твыттер"></a></li>
+                    <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Фейсбук"></a></li>
+                    <li><a href="#"><img src="./imges/social/linkedin.svg" alt="иконка Линкедин"></a></li>
                 </ul>
             </li>
             <li>
-                <img src="./img/team/ivan.jpg" alt="Фото Ивана" width="270" height="260">
+                <img src="./imges/team/ivan.jpg" alt="Фото Ивана" width="270" height="260">
                 <h3>Иван Николаев</h3>
                 <p lang="en">UI Designer</p>
                 <ul>
-                    <li><a href="#"><img src="./img/social/instagram.svg" alt="иконка Инстаграм"></a></li>
-                    <li><a href="#"><img src="./img/social/twitter.svg" alt="иконка Твыттер"></a></li>
-                    <li><a href="#"><img src="./img/social/facebook.svg" alt="иконка Фейсбук"></a></li>
-                    <li><a href="#"><img src="./img/social/linkedin.svg" alt="иконка Линкедин"></a></li>
+                    <li><a href="#"><img src="./imges/social/instagram.svg" alt="иконка Инстаграм"></a></li>
+                    <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Твыттер"></a></li>
+                    <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Фейсбук"></a></li>
+                    <li><a href="#"><img src="./imges/social/linkedin.svg" alt="иконка Линкедин"></a></li>
                 </ul>
             </li>
         </ul>
