Добавлена секция Клиенты

--- a/index.html
+++ b/index.html
@@ -126,6 +126,18 @@
             </li>
         </ul>
     </section>
+    <!-- ПОСТОЯННЫЕ КЛИЕНТЫ -->
+    <section>
+        <h2>Постоянные клиенты</h2>
+        <ul>
+            <li><a href="#"><img src="./imges/clients/logo 1.svg" alt="Логотип первого клиента"></a></li>
+            <li><a href="#"><img src="./imges/clients/logo 2.svg" alt="Логотип второго клиента"></a></li>
+            <li><a href="#"><img src="./imges/clients/logo 3.svg" alt="Логотип третьего клиента"></a></li>
+            <li><a href="#"><img src="./imges/clients/logo 4.svg" alt="Логотип четвертого клиента"></a></li>
+            <li><a href="#"><img src="./imges/clients/logo 5.svg" alt="Логотип пятого клиента"></a></li>
+            <li><a href="#"><img src="./imges/clients/logo 6.svg" alt="Логотип шестого клиента"></a></li>
+        </ul>
+    </section>
 </body>
 
 </html>
