Добавлен Подвал макета

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- ШАПКА МАКЕТА -->
     <header>
         <nav>
-            <a href="#"><span>Web</span> Studio</a>
+            <a href="index.html"><span>Web</span> Studio</a>
             <ul>
                 <li><a href="#">Студия</a></li>
                 <li><a href="#">Портфолио</a></li>
@@ -138,6 +138,27 @@
             <li><a href="#"><img src="./imges/clients/logo 6.svg" alt="Логотип шестого клиента"></a></li>
         </ul>
     </section>
+    <!-- ПОДВАЛ -->
+    <footer>
+        <div>
+            <a href="index.html"><span>Web</span> Studio</a>
+        </div>
+        <address>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <div><a href="mailto:info@example.com">info@example.com</a></div>
+            <div><a href="tel:+38 099 111 11 11">+38 099 111 11 11</a></div>
+        </address>
+        <div>
+            <b>присоединяйтесь</b>
+            <ul>
+                <li><a href="#"><img src="./imges/social/instagram.svg" alt="иконка Инстаграм"></a></li>
+                <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Твыттер"></a></li>
+                <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Фейсбук"></a></li>
+                <li><a href="#"><img src="./imges/social/linkedin.svg" alt="иконка Линкедин"></a></li>
+            </ul>
+
+        </div>
+    </footer>
 </body>
 
 </html>
