--- a/index.html
+++ b/index.html
@@ -20,124 +20,126 @@
         </nav>
         <div>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
         </div>
     </header>
-    <!-- Секция ГЕРОЙ -->
-    <section>
-        <h1>Эффективные решения <br>для вашего бизнеса</h1>
-        <button>Заказать услугу</button>
-    </section>
-    <!-- О НАС -->
-    <section>
-        <h2 hidden>О нас</h2>
-        <ul>
-            <li>
-                <img src="./imges/about-us/antenna 1.svg" alt="Иконака антены">
-                <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы
-                    по формированию позиции.</p>
-            </li>
-            <li>
-                <img src="./imges/about-us/clock 1.svg" alt="Иконка часов">
-                <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки
-                    и место обучения кадров влечет за собой.</p>
-            </li>
-            <li>
-                <img src="./imges/about-us/diagram 1.svg" alt="Иконка диаграмы">
-                <h3>Планирование</h3>
-                <p>Равным образом консультация
-                    с широким активом в значительной степени обуславливает.</p>
-            </li>
-            <li>
-                <img src="./imges/about-us/astronaut 1.svg" alt="Иконка астронавта">
-                <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна,
-                    что реализация плановых заданий.</p>
-            </li>
-        </ul>
-    </section>
-    <!-- ЧЕМ МЫ ЗАНИМАЕМСЯ -->
-    <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-            <li>
-                <img src="./imges/ourwork/noutbook.jpg" alt="Изображение ноутбука" width="379" height="294">
-                <p>Десктопные приложения</p>
-            </li>
-        </ul>
-        <li>
-            <img src="./imges/ourwork/mobile.jpg" alt="Изображение смартфона" width="379" height="294">
-            <p>Мобильные приложения</p>
-        </li>
-        <li>
-            <img src="./imges/ourwork/dekstop.jpg" alt="Изображение монитора" width="379" height="294">
-            <p>Дизайнерские решения</p>
-        </li>
-    </section>
-    <!-- НАША КОМАНДА -->
-    <section>
-        <h2>Наша команда</h2>
-        <ul>
-            <li>
-                <img src="./imges/team/nikolai.jpg" alt="Фото Николая" width="270" height="260">
-                <h3>Николай Кучеренко</h3>
-                <p lang="en">Product Designer</p>
-                <ul>
-                    <li><a href="#"><img src="./imges/social/instagram.svg" alt="иконка Инстаграм"></a></li>
-                    <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Твыттер"></a></li>
-                    <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Фейсбук"></a></li>
-                    <li><a href="#"><img src="./imges/social/linkedin.svg" alt="иконка Линкедин"></a></li>
-                </ul>
-            </li>
-            <li>
-                <img src="./imges/team/olga.jpg" alt="Фото Ольги" width="270" height="260">
-                <h3>Ольга Иванова</h3>
-                <p lang="en">Frontend Developer</p>
-                <ul>
-                    <li><a href="#"><img src="./imges/social/instagram.svg" alt="иконка Инстаграм"></a></li>
-                    <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Твыттер"></a></li>
-                    <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Фейсбук"></a></li>
-                    <li><a href="#"><img src="./imges/social/linkedin.svg" alt="иконка Линкедин"></a></li>
-                </ul>
-            </li>
-            <li>
-                <img src="./imges/team/andrei.jpg" alt="Фото Андрея" width="270" height="260">
-                <h3>Андрей Шевченко</h3>
-                <p lang="en">Marketing</p>
-                <ul>
-                    <li><a href="#"><img src="./imges/social/instagram.svg" alt="иконка Инстаграм"></a></li>
-                    <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Твыттер"></a></li>
-                    <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Фейсбук"></a></li>
-                    <li><a href="#"><img src="./imges/social/linkedin.svg" alt="иконка Линкедин"></a></li>
-                </ul>
-            </li>
-            <li>
-                <img src="./imges/team/ivan.jpg" alt="Фото Ивана" width="270" height="260">
-                <h3>Иван Николаев</h3>
-                <p lang="en">UI Designer</p>
-                <ul>
-                    <li><a href="#"><img src="./imges/social/instagram.svg" alt="иконка Инстаграм"></a></li>
-                    <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Твыттер"></a></li>
-                    <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Фейсбук"></a></li>
-                    <li><a href="#"><img src="./imges/social/linkedin.svg" alt="иконка Линкедин"></a></li>
-                </ul>
-            </li>
-        </ul>
-    </section>
-    <!-- ПОСТОЯННЫЕ КЛИЕНТЫ -->
-    <section>
-        <h2>Постоянные клиенты</h2>
-        <ul>
-            <li><a href="#"><img src="./imges/clients/logo 1.svg" alt="Логотип первого клиента"></a></li>
-            <li><a href="#"><img src="./imges/clients/logo 2.svg" alt="Логотип второго клиента"></a></li>
-            <li><a href="#"><img src="./imges/clients/logo 3.svg" alt="Логотип третьего клиента"></a></li>
-            <li><a href="#"><img src="./imges/clients/logo 4.svg" alt="Логотип четвертого клиента"></a></li>
-            <li><a href="#"><img src="./imges/clients/logo 5.svg" alt="Логотип пятого клиента"></a></li>
-            <li><a href="#"><img src="./imges/clients/logo 6.svg" alt="Логотип шестого клиента"></a></li>
-        </ul>
-    </section>
+    <main>
+        <!-- Секция ГЕРОЙ -->
+        <section>
+            <h1>Эффективные решения <br>для вашего бизнеса</h1>
+            <button>Заказать услугу</button>
+        </section>
+        <!-- О НАС -->
+        <section>
+            <h2 hidden>О нас</h2>
+            <ul>
+                <li>
+                    <img src="./imges/aboutus/antenna.svg" alt="Иконака антены" width="65" height="70">
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы
+                        по формированию позиции.</p>
+                </li>
+                <li>
+                    <img src="./imges/aboutus/clock.svg" alt="Иконка часов" width="70" height="70">
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки
+                        и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <img src="./imges/aboutus/diagram.svg" alt="Иконка диаграмы" width="70" height="70">
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация
+                        с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <img src="./imges/aboutus/astronaut.svg" alt="Иконка астронавта" width="70" height="70">
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна,
+                        что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+        <!-- ЧЕМ МЫ ЗАНИМАЕМСЯ -->
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li>
+                    <img src="./imges/ourwork/noutbook.jpg" alt="Изображение ноутбука" width="379" height="294">
+                    <p>Десктопные приложения</p>
+                </li>
+                <li>
+                    <img src="./imges/ourwork/mobile.jpg" alt="Изображение смартфона" width="379" height="294">
+                    <p>Мобильные приложения</p>
+                </li>
+                <li>
+                    <img src="./imges/ourwork/dekstop.jpg" alt="Изображение монитора" width="379" height="294">
+                    <p>Дизайнерские решения</p>
+                </li>
+            </ul>
+        </section>
+        <!-- НАША КОМАНДА -->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./imges/team/nikolai.jpg" alt="Фото Николая" width="270" height="260">
+                    <h3>Николай Кучеренко</h3>
+                    <p lang="en">Product Designer</p>
+                    <ul>
+                        <li><a href="#"><img src="./imges/social/instagram.svg" alt="иконка Инстаграм"></a></li>
+                        <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Твыттер"></a></li>
+                        <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Фейсбук"></a></li>
+                        <li><a href="#"><img src="./imges/social/linkedin.svg" alt="иконка Линкедин"></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <img src="./imges/team/olga.jpg" alt="Фото Ольги" width="270" height="260">
+                    <h3>Ольга Иванова</h3>
+                    <p lang="en">Frontend Developer</p>
+                    <ul>
+                        <li><a href="#"><img src="./imges/social/instagram.svg" alt="иконка Инстаграм"></a></li>
+                        <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Твыттер"></a></li>
+                        <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Фейсбук"></a></li>
+                        <li><a href="#"><img src="./imges/social/linkedin.svg" alt="иконка Линкедин"></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <img src="./imges/team/andrei.jpg" alt="Фото Андрея" width="270" height="260">
+                    <h3>Андрей Шевченко</h3>
+                    <p lang="en">Marketing</p>
+                    <ul>
+                        <li><a href="#"><img src="./imges/social/instagram.svg" alt="иконка Инстаграм"></a></li>
+                        <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Твыттер"></a></li>
+                        <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Фейсбук"></a></li>
+                        <li><a href="#"><img src="./imges/social/linkedin.svg" alt="иконка Линкедин"></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <img src="./imges/team/ivan.jpg" alt="Фото Ивана" width="270" height="260">
+                    <h3>Иван Николаев</h3>
+                    <p lang="en">UI Designer</p>
+                    <ul>
+                        <li><a href="#"><img src="./imges/social/instagram.svg" alt="иконка Инстаграм"></a></li>
+                        <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Твыттер"></a></li>
+                        <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Фейсбук"></a></li>
+                        <li><a href="#"><img src="./imges/social/linkedin.svg" alt="иконка Линкедин"></a></li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+        <!-- ПОСТОЯННЫЕ КЛИЕНТЫ -->
+        <section>
+            <h2>Постоянные клиенты</h2>
+            <ul>
+                <li><a href="#"><img src="./imges/clients/logo1.svg" alt="Логотип первого клиента"></a></li>
+                <li><a href="#"><img src="./imges/clients/logo2.svg" alt="Логотип второго клиента"></a></li>
+                <li><a href="#"><img src="./imges/clients/logo3.svg" alt="Логотип третьего клиента"></a></li>
+                <li><a href="#"><img src="./imges/clients/logo4.svg" alt="Логотип четвертого клиента"></a></li>
+                <li><a href="#"><img src="./imges/clients/logo5.svg" alt="Логотип пятого клиента"></a></li>
+                <li><a href="#"><img src="./imges/clients/logo6.svg" alt="Логотип шестого клиента"></a></li>
+            </ul>
+        </section>
+    </main>
     <!-- ПОДВАЛ -->
     <footer>
         <div>
@@ -146,7 +148,7 @@
         <address>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
             <div><a href="mailto:info@example.com">info@example.com</a></div>
-            <div><a href="tel:+38 099 111 11 11">+38 099 111 11 11</a></div>
+            <div><a href="tel:+380991111111">+38 099 111 11 11</a></div>
         </address>
         <div>
             <b>присоединяйтесь</b>
@@ -156,7 +158,6 @@
                 <li><a href="#"><img src="./imges/social/twitter.svg" alt="иконка Фейсбук"></a></li>
                 <li><a href="#"><img src="./imges/social/linkedin.svg" alt="иконка Линкедин"></a></li>
             </ul>
-
         </div>
     </footer>
 </body>
